impl/tests/errors/__snapshots__/test_non_array_type.ambr
# serializer version: 1
# name: test_for_stmt_output
  '''
  
  [31m[E04] Error:[0m Expected a type of [38;5;201mArray<Int>[0m but found [38;5;155mInt[0m
     [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mstdin:1:10[38;5;246m][0m
     [38;5;246m│[0m
   [38;5;246m1 │[0m [38;5;249mf[0m[38;5;249mo[0m[38;5;249mr[0m[38;5;249m [0m[38;5;249mi[0m[38;5;249m [0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249m [0m[38;5;155m4[0m[38;5;155m3[0m[38;5;249m [0m[38;5;249m{[0m[38;5;249m [0m[38;5;249mp[0m[38;5;249mr[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mi[0m[38;5;249m [0m[38;5;249m}[0m
   [38;5;240m  │[0m          [38;5;155m─[0m[38;5;155m┬[0m  
   [38;5;240m  │[0m           [38;5;155m╰[0m[38;5;155m─[0m[38;5;155m─[0m This is of type [38;5;155mInt[0m
  [38;5;246m───╯[0m
  
  
  '''
# ---
